--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header-left">
         <div class="logo"><a href="#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
         <li class="menu-left">
-          <ul><a href="#sec4">Specta</a></ul>
+          <ul><a href="#sec3">Specta</a></ul>
           <ul><a>About</a></ul>
         </li>
       </div>
@@ -32,10 +32,12 @@
       </div>
     </header>
 
-   
-
-    <div class="text-container">
+    
+    <div class="text-container under">
       <h1 class="specta">SPECTA®</h1>
+    </div>
+
+    <div class="text-container over">
       <div class="personal-silencer description-block">
         <h2 class="description-title"> Your personal eco-anxiety silencer</h2>
         <a href="" class="button"> Buy now</a>
@@ -52,25 +54,22 @@
         <p> The Litia App shows you how many anxious contents you were protected from as well as your daily and weekly usage of Specta, in order to make you more concious about what you are consuming on your screens</p>
       </div>
     </div>
-
-    <div class="waves-container">
-      <div style="width: 100%; height: 100%; background-color: black; opacity: 0.2;"></div>
-    </div>
-
    
 
     <div class="page">
+
       <section class="sec0" id="sec0"> 
         <div class="header-placeholder"></div>
-        <div class="intro-text-container"><h1>See climate change from a new perspective</h1></div>
-        <div class="divider"></div>
+        <div class="intro-text-container" style="z-index: 1000;">
+        <h2>See climate change from a new perspective</h2>
+        <a class="button" href="#sec3" style="cursor: pointer;"> Discover Specta</a>
+        </div>
       </section>
-
-      <section class="sec1"></section>
+      
       <section class="sec2"></section>
-      <section class="sec3" ></section>
+      <section class="sec3" id="sec3"></section>
       <section class="sec3"></section>
-      <section class="sec4" id="sec4"></section>
+      <section class="sec4"></section>
       <section class="sec4"></section>
       <section class="secvideo"></section>
       <section class="secvideo"></section>
@@ -87,10 +86,10 @@
       <section class="sec5"></section>
       <section class="sec6"></section>
       <section class="sec6"></section>
-      <section class="sec7"></section>
+      <!-- <section class="sec7"></section>
       <section class="sec7"></section>
       <section class="sec8"></section>
-      <section class="sec8"></section> 
+      <section class="sec8"></section>  -->
     </div>
 
    
@@ -100,6 +99,6 @@
 
 
     <script type="module" src="/main.js"></script>
-    <script src="sketch.js"></script>
+    <!-- <script src="sketch.js"></script> -->
   </body>
 </html>
