--- a/index.html
+++ b/index.html
@@ -35,13 +35,6 @@
     
     <div class="text-container under">
       <h1 class="specta">SPECTA®</h1>
-    </div>
-
-    <div class="text-container over">
-      <div class="personal-silencer description-block">
-        <h2 class="description-title"> Your personal eco-anxiety silencer</h2>
-        <a href="" class="button"> Buy now</a>
-      </div>
       <div class="plug-and-play description-block">
         <h2 class="description-title"> Easly plug it to your Wi-Fi</h2>
         <p> After a short configuration through the Litia app Specta will protect you on all your devices</p>
@@ -49,9 +42,20 @@
       <div class="description-block all-devices">
         <h1>Protection on all your devices</h1>
       </div>
+    </div>
+
+    <div class="text-container over">
+      <div class="personal-silencer description-block">
+        <h2 class="description-title"> Your personal eco-anxiety silencer</h2>
+        <a href="" class="button"> Buy now</a>
+      </div>
       <div class="app description-block">
         <h2 class="description-title"> Keep track of your usage </h2>
         <p> The Litia App shows you how many anxious contents you were protected from as well as your daily and weekly usage of Specta, in order to make you more concious about what you are consuming on your screens</p>
+      </div>
+      <div class="buynow description-block">
+        <h3>SPECTA® white</h3>
+        <a href="cart.html" class="button">Buy now </a>
       </div>
     </div>
    
@@ -86,10 +90,8 @@
       <section class="sec5"></section>
       <section class="sec6"></section>
       <section class="sec6"></section>
-      <!-- <section class="sec7"></section>
       <section class="sec7"></section>
-      <section class="sec8"></section>
-      <section class="sec8"></section>  -->
+      <section class="sec7"></section>
     </div>
 
    
