--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section class="secvideo"></section>
       <div class="video-container">
         <video id="video1" class="video-scrub" 
-          src="/assets/2output_960_1.mp4" 
+          src="assets/2output_960_1.mp4" 
           playsinline="true" 
           webkit-playsinline="true" 
           preload="metadata" 
@@ -122,7 +122,7 @@
     </footer>    
 
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
