mobile animation step 0 e 1

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
       
     </header>
 
-    <li class="mobile-menu">
+    <div class="mobile-menu">
       <div class="cross" onclick="closeMobileMenu()">
         <div class="cross-line"></div>
         <div class="cross-line"></div>
       </div>
-      <ul><a href="#sec3">Specta</a></ul>
+      <li><a href="#sec3">Specta</a></li>
       <div class="divider"></div>
-      <ul><a>About</a></ul>
+      <li><a>About</a></li>
       <div class="divider"></div>
-      <ul><a href="login.html">Login</a></ul>
+      <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
-      <ul><a href="Cart.html">Cart | 0</a></ul>
-    </li>
+      <li><a href="Cart.html">Cart | 0</a></li>
+    </div>
 
     
     <div class="text-container under">
