--- a/index.html
+++ b/index.html
@@ -64,20 +64,21 @@
     
     <div class="text-container under">
       <h1 class="specta">SPECTA®</h1>
+      <div class="personal-silencer description-block">
+        <h2 class="description-title"> Your personal <span class="nowrap">eco-anxiety </span> silencer</h2>
+        <a href="specta.html" class="button"> Buy now</a>
+      </div>
       <div class="plug-and-play description-block">
-        <h2 class="description-title"> Easly plug it to your Wi-Fi</h2>
+        <h2 class="description-title"> Easly plug it and connect it to <span class="nowrap"> your Wi-Fi </span> </h2>
         <p> After a short configuration through the Litia app Specta will protect you on all your devices</p>
       </div>
       <div class="description-block all-devices">
         <h1>Protection on all your devices</h1>
+        <p> Use Specta with your phone or laptop connected to your <span class="nowrap">Wi-Fi</span> , no  <span class="nowrap"> eco-anxious </span> content will disturb you </p>
       </div>
     </div>
 
     <div class="text-container over">
-      <div class="personal-silencer description-block">
-        <h2 class="description-title"> Your personal eco-anxiety silencer</h2>
-        <a href="specta.html" class="button"> Buy now</a>
-      </div>
       <div class="app description-block">
         <h2 class="description-title"> Keep track of your usage </h2>
         <p> The Litia App shows you how many anxious contents you were protected from as well as your daily and weekly usage of Specta, in order to make you more concious about what you are consuming on your screens</p>
@@ -94,7 +95,7 @@
       <section class="sec0" id="sec0"> 
         <div class="header-placeholder"></div>
         <div class="intro-text-container" style="z-index: 1000;">
-        <h2>See climate change from a new perspective</h2>
+        <h2>See climate change from  <span class="nowrap"> a new </span>  perspective</h2>
         <a class="button" href="#sec3" style="cursor: pointer;"> Discover Specta</a>
         </div>
       </section>
@@ -127,6 +128,7 @@
     <div class="canvas-container"></div>
 
     <footer>
+
       <div class="footer-top table-container">
         <p>info@litia.com <br>+44 20 7229 3487</p>
         <p>22 Needham RoadLondon <br>United Kingdom</p>
@@ -138,9 +140,7 @@
         <p>© 2023 Litia</p>
         <p>Terms & Conditions</p>
         <p>Cookies</p>
-        <p>Policy</p>
-        <p>Terms of use</p>
-        <p>English (UK) – [ £ ]</p>
+        <p>English (UK)</p>
       </div>
     </footer>    
 
