--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="loading">
       <object data="assets/Risorsa 1.svg" class="loading-logo"> </object>
       <div class="loading-rect"></div>
+
+      <p> Morphing a new vision </p>
+      
     </div>
     
     <!-- header -->
@@ -130,7 +133,7 @@
     <footer>
 
       <div class="footer-top table-container">
-        <p>info@litia.com <br>+44 20 7229 3487</p>
+        <p>info@litia.com</p>
         <p>22 Needham RoadLondon <br>United Kingdom</p>
       </div>
 
