--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       
       <div class="header-left">
-        <div class="logo"><a href="#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
+        <div class="logo"><a href="index.html#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
         <li class="desktop-menu menu-left">
           <ul><a href="#sec3">Specta</a></ul>
           <ul><a>About</a></ul>
@@ -99,7 +99,7 @@
         <div class="header-placeholder"></div>
         <div class="intro-text-container" style="z-index: 1000;">
         <h2>See climate change from  <span class="nowrap"> a new </span>  perspective</h2>
-        <a class="button" href="#sec3" style="cursor: pointer;"> Discover Specta</a>
+        <a class="button" onclick="goToSpecta()" style="cursor: pointer;"> Discover Specta</a>
         </div>
       </section>
       
