--- a/specta.html
+++ b/specta.html
@@ -20,7 +20,7 @@
     <header>
       
       <div class="header-left">
-        <div class="logo"><a href="#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
+        <div class="logo"><a href="index.html#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
         <li class="desktop-menu menu-left">
           <ul><a href="#sec3">Specta</a></ul>
           <ul><a>About</a></ul>
