--- a/specta.html
+++ b/specta.html
@@ -64,6 +64,7 @@
         <div class="span-2"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
         <div class="span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
         <div class="span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
+        <div class="loop-image span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
       </div>
 
       <div class="product-text">
