video mutato, play pausa corretti, immagine specta

--- a/index.html
+++ b/index.html
@@ -107,16 +107,13 @@
       <section class="sec3" id="sec3"></section>
       <section class="sec3"></section>
       <section class="sec4"></section>
-      <section class="sec4"></section>
+      <section class="secvideo   "></section>
       <section class="secvideo"></section>
       <section class="secvideo"></section>
       <div class="video-container">
         <video id="video1" class="video-scrub" 
           src="assets/2output_960_1.mp4" 
-          playsinline="true" 
-          webkit-playsinline="true" 
-          preload="metadata" 
-          muted="muted">
+          muted loop>
         </video>
       </div>
       <section class="sec5"></section>
