--- a/specta.html
+++ b/specta.html
@@ -58,13 +58,13 @@
 
     <div class="spacebetween product">
       <div class="gallery">
-        <div class="span-2 active"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
-        <div class="span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
-        <div class="span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
-        <div class="span-2"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
-        <div class="span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
-        <div class="span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
-        <div class="loop-image span-1"><img src="assets/Immagini/IMG_3326-Modifica.jpg" alt=""></div>
+        <div class="span-2 active"><img src="assets/Immagini/specta-3-4.jpg" alt=""></div>
+        <div class="span-1"><img src="assets/Immagini/specta-front.jpg" alt=""></div>
+        <div class="span-1"><img src="assets/Immagini/scpecta-box-front.jpg" alt=""></div>
+        <div class="span-2"><img src="assets/Immagini/specta-kit.jpg" alt=""></div>
+        <div class="span-1"><img src="assets/Immagini/specta-box-open.jpg" alt=""></div>
+        <div class="span-1"><img src="assets/Immagini/specta-hand.jpg" alt=""></div>
+        <div class="loop-image span-1"><img src="assets/Immagini/specta-3-4.jpg" alt=""></div>
       </div>
 
       <div class="product-text">
@@ -122,6 +122,7 @@
     </footer>    
 
     <script src="app.js"></script>
+    <script src="product.js"></script>
     
   </body>
 </html>
