--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="header-left">
         <div class="logo"><a href="index.html#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
         <li class="desktop-menu menu-left">
-          <ul><a href="#sec3"class="whitetext" >Specta</a></ul>
-          <!-- <ul><a class="whitetext" >About</a></ul> -->
+          <ul><a href="specta.html" class="whitetext" >Specta</a></ul>
+          <ul><a href="about.html" class="whitetext" >About</a></ul>
         </li>
       </div>
       
@@ -55,9 +55,9 @@
         <div class="cross-line"></div>
         <div class="cross-line"></div>
       </div>
-      <li><a href="#sec3">Specta</a></li>
-      <!-- <div class="divider"></div>
-      <li><a>About</a></li> -->
+      <li><a href="specta.html">Specta</a></li>
+      <div class="divider"></div>
+      <li href="about.html"><a>About</a></li>
       <div class="divider"></div>
       <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
