--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="video-container">
         <video id="video1" class="video-scrub" 
           src="assets/2output_960_1.mp4" 
-          muted loop>
+          muted autoplay loop>
         </video>
       </div>
       <section class="sec5"></section>
