--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
    
     <div class="canvas-container"></div>
 
-    <footer>
+    <footer style="position: fixed; bottom: 10px; width: calc(100% - 20px);">
 
       <div class="footer-top table-container">
         <p>info@litia.com</p>
