link cart da menu mobile

--- a/specta.html
+++ b/specta.html
@@ -51,7 +51,7 @@
       <div class="divider"></div>
       <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
-      <li><a href="Cart.html">Cart | 0</a></li>
+      <li><a href="cart.html">Cart | 0</a></li>
     </div>
     
     <div class="header-placeholder"></div>
