--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="divider"></div>
       <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
-      <li><a href="Cart.html">Cart | 0</a></li>
+      <li><a href="cart.html">Cart | 0</a></li>
     </div>
 
     
