correzione footer, logo menu e foto mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <li><a href="specta.html">Specta</a></li>
       <div class="divider"></div>
-      <li href="about.html"><a>About</a></li>
+      <li><a href="about.html">About</a></li>
       <div class="divider"></div>
       <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
