--- a/specta.html
+++ b/specta.html
@@ -47,7 +47,7 @@
       </div>
       <li><a href="specta.html">Specta</a></li>
       <div class="divider"></div>
-      <li href="about.html"><a>About</a></li>
+      <li><a href="about.html">About</a></li>
       <div class="divider"></div>
       <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
@@ -61,14 +61,14 @@
         <div class="span-2 active"><img src="assets/Immagini/specta-3-4.jpg" alt=""></div>
         <div class="span-1"><img src="assets/Immagini/specta-front.jpg" alt=""></div>
         <div class="span-1"><img src="assets/Immagini/scpecta-box-front.jpg" alt=""></div>
-        <div class="span-2"><img src="assets/Immagini/specta-kit.jpg" alt=""></div>
-        <div class="span-1"><img src="assets/Immagini/specta-box-open.jpg" alt=""></div>
+        <div class="span-2"><img class="desktop-img" src="assets/Immagini/specta-kit.jpg" alt=""> <img class="mobile-img" src="assets/Immagini/specta-kit-mobile.jpg" alt=""> </div>
+        <div class="span-1"><img class="desktop-img" src="assets/Immagini/specta-box-open.jpg" alt=""><img class="mobile-img" src="assets/Immagini/specta-box-open-mobile.jpg" alt=""></div>
         <div class="span-1"><img src="assets/Immagini/specta-hand.jpg" alt=""></div>
         <div class="loop-image span-1"><img src="assets/Immagini/specta-3-4.jpg" alt=""></div>
       </div>
 
       <div class="product-text">
-        <h1>SPECTA®</h1>
+        <h2>SPECTA®</h2>
         <div class="divider"></div>
 
         <p style="max-width: 100%;">Specta is a high tech product that protects you from eco-anxious content by showing you the millennial rock's perspective on climate change and allowing you to widen your vision and silence what may hurt you.</p>
