--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
       </div>
       <li><a href="specta.html">Specta</a></li>
       <div class="divider"></div>
-      <li href="about.html"><a>About</a></li>
+      <li><a href="about.html">About</a></li>
       <div class="divider"></div>
       <li><a href="login.html">Login</a></li>
       <div class="divider"></div>
