--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/assets/logo.svg" />
+    <link rel="icon" href="assets/logo.svg">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
 
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Litia</title>
+    <title>Litia | Cart</title>
   </head>
   <body>
     
@@ -30,7 +30,7 @@
       
       <div class="desktop-menu menu-right">
           <a class="whitetext" href="login.html">Login</a>
-          <a class="whitetext" href="cart.html">Cart | 0</a>
+          <a class="whitetext" href="cart.html">Cart | 1</a>
       </div>
 
       <div class="burger-menu" onclick="openMobileMenu()">
@@ -73,7 +73,7 @@
       <div class="table-container">
         <p>Specta White</p>
         <p>£ 399</p>
-        <p>-  1  +</p>
+        <div style="width: 25%; position: relative;"><div class="counter"> <p class="plusminus" onclick="decreaseCounter()">–</p> <p>1</p> <p class="plusminus" onclick="increaseCounter()">+</p> </div></div>
         <p>£ 418.80</p>
       </div>
     </section>
@@ -93,7 +93,7 @@
       <div class="divider"></div>
       <div class="table-container">
         <p>Quantity</p>
-        <p>-  1  +</p>
+        <div class="counter"> <p class="plusminus" onclick="decreaseCounter()">–</p> <p>1</p> <p class="plusminus" onclick="increaseCounter()">+</p></div>
       </div>
       <div class="divider"></div>
       <div class="table-container">
