hover menu desktop

--- a/specta.html
+++ b/specta.html
@@ -22,15 +22,15 @@
       <div class="header-left">
         <div class="logo"><a href="index.html#sec0"><img src="assets\Immagini\Litia-logo-bianco.png" alt=""></div></a>
         <li class="desktop-menu menu-left">
-          <ul><a href="specta.html" class="whitetext" >Specta</a></ul>
-          <ul><a href="about.html" class="whitetext" >About</a></ul>
+          <ul><a href="specta.html" class="whitetext menulink" >Specta</a></ul>
+          <ul><a href="about.html" class="whitetext menulink" >About</a></ul>
         </li>
       </div>
       
       
       <div class="desktop-menu menu-right">
-          <a class="whitetext" href="login.html">Login</a>
-          <a class="whitetext" href="cart.html">Cart | 0</a>
+          <a class="whitetext menulink" href="login.html">Login</a>
+          <a class="whitetext menulink" href="cart.html">Cart | 0</a>
       </div>
 
       <div class="burger-menu" onclick="openMobileMenu()">
